# Trabalho-ComputacaoGrafica

./: CMakeLists.txt  Globals.cpp  Globals.h  README.md  Scene.cpp  Scene.h  VectorMath.cpp  VectorMath.h  curva.cpp  main.cpp  montanha-russa.cpp
Projeto1/: CMakeLists.txt  Globals.cpp  Globals.h  README.md  Scene.cpp  Scene.h  VectorMath.cpp  VectorMath.h  main.cpp
old/: montanha-russa.cpp
